--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
