--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
