--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
